--- a/学习笔记.md
+++ b/学习笔记.md
@@ -12,14 +12,27 @@ pip install ipython
 # pip unstall ipython
 ```
 
-# 变量
+# 变量类型转换
 
+```python
 type()
 int()   # 数值或字符串 → 整数，可以指定进制。
 float() # 字符串 → 浮点数。
 str()   # 指定的对象 → 字符串形式，可以指定编码。
 chr()   # 整数 → 该编码对应的字符串（一个字符）。
 ord()   # 字符串（一个字符） → 对应的编码（整数）。
+```
 
+# 算术运算
+
+```python
+print(321 + 123)     # 加法运算
+print(321 - 123)     # 减法运算
+print(321 * 123)     # 乘法运算
+print(321 / 123)     # 除法运算
+print(321 % 123)     # 求模运算
+print(321 // 123)    # 整除运算
+print(321 ** 123)    # 求幂运算
+```
 
 
