--- a/第08课：常用数据结构之列表.md
+++ b/第08课：常用数据结构之列表.md
@@ -102,7 +102,7 @@ items7 = [3, 2, 1]
 print(items5 <= items7)    # True
 ```
 
-值得一提的是，由于列表是可变类型，所以通过索引操作既可以获取列表中的元素，也可以更新列表中的元素。对列表做索引操作一样要注意索引越界的问题，对于有`N`个元素的列表，正向索引的范围是`0`到`N-1`，负向索引的范围是`-1`到`-N`，如果超出这个范围，将引发`IndexError`异常，错误信息为：`list index out of range`。
+值得一提的是，由于列表是可变类型，所以通过索引操作既可以获取列表中的元素，也可以更新列表中的元素。对列表做索引操作一样要注意索引越界的问题，**对于有`N`个元素的列表，正向索引的范围是`0`到`N-1`，负向索引的范围是`-1`到`-N`**，如果超出这个范围，将引发`IndexError`异常，错误信息为：`list index out of range`。
 
 #### 列表元素的遍历
 
