--- a/学习笔记.md
+++ b/学习笔记.md
@@ -12,6 +12,10 @@ pip install ipython
 # pip unstall ipython
 ```
 
+# Python Tutor
+
+https://pythontutor.com/
+
 # 变量类型转换
 
 ```python
@@ -35,4 +39,13 @@ print(321 // 123)    # 整除运算
 print(321 ** 123)    # 求幂运算
 ```
 
+# 列表
 
+```python
+list(range(1, 10))  # [1, 2, 3, 4, 5, 6, 7, 8, 9]
+list('hello')       # ['h', 'e', 'l', 'l', 'o']
+
+
+
+
+```
