--- a/第09课：常用数据结构之元组.md
+++ b/第09课：常用数据结构之元组.md
@@ -85,7 +85,7 @@ a = 1, 10, 100, 1000
 # i, j, k, l, m, n = a    # ValueError: not enough values to unpack (expected 6, got 4)
 ```
 
-有一种解决变量个数少于元素的个数方法，就是使用星号表达式，我们之前讲函数的可变参数时使用过星号表达式。有了星号表达式，我们就可以让一个变量接收多个值，代码如下所示。需要注意的是，用星号表达式修饰的变量会变成一个列表，列表中有0个或多个元素。还有在解包语法中，星号表达式只能出现一次。
+有一种解决变量个数少于元素的个数方法，就是使用星号表达式，我们之前讲函数的可变参数时使用过星号表达式。有了星号表达式，我们就可以让一个变量接收多个值，代码如下所示。**需要注意的是，用星号表达式修饰的变量会变成一个列表，列表中有0个或多个元素。还有在解包语法中，星号表达式只能出现一次。**
 
 ```Python
 a = 1, 10, 100, 1000
