--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,4 +1,8 @@
 
+# Tips
+
+- print函数中的end=''表示输出后不换行，即将默认的结束符\n（换行符）更换为''（空字符）。
+
 # 修改包下载的源为国内的源
 
 ```python
@@ -65,6 +69,82 @@ print(sys.getsizeof(a), sys.getsizeof(b))    # 900120 800056
 print(timeit.timeit('[1, 2, 3, 4, 5, 6, 7, 8, 9]'))
 print(timeit.timeit('(1, 2, 3, 4, 5, 6, 7, 8, 9)'))
 ```
+
+# 字符串
+
+- **==**：比较编码
+- **is**：比较内存地址
+- 字符串是不可变类型，所以不能通过索引运算修改字符串中的字符
+
+```python
+ord()   # 获取文本编码
+```
+
+## 格式化字符串
+
+
+| 变量值      | 占位符     | 格式化结果    | 说明 |
+| ----------- | ---------- | ------------- | ---- |
+| `3.1415926` | `{:.2f}`   | `'3.14'`      | 保留小数点后两位 |
+| `3.1415926` | `{:+.2f}`  | `'+3.14'`       | 带符号保留小数点后两位 |
+| `-1`        | `{:+.2f}`  | `'-1.00'` | 带符号保留小数点后两位 |
+| `3.1415926` | `{:.0f}`   | `'3'` | 不带小数 |
+| `123`       | `{:0>10d}` | `'0000000123'` | 左边补`0`，补够10位 |
+| `123`       | `{:x<10d}` | `'123xxxxxxx'` | 右边补`x` ，补够10位 |
+| `123`       | `{:>10d}`  | `'       123'` | 左边补空格，补够10位 |
+| `123`       | `{:<10d}` | `'123       '` | 右边补空格，补够10位 |
+| `123456789` | `{:,}`     | `'123,456,789'` | 逗号分隔格式 |
+| `0.123`     | `{:.2%}`   | `'12.30%'`    | 百分比格式 |
+| `123456789` | `{:.2e}`   | `'1.23e+08'`  | 科学计数法格式 |
+
+# 集合
+
+- 集合的成员运算在性能上要优于列表的成员运算
+- 集合中的元素必须是hashable类型。
+  - **hashable类型**：指的是能够计算出哈希码的数据类型，大家可以暂时将哈希码理解为和变量对应的唯一的ID值。
+  - **通常不可变类型都是hashable类型**，如整数、浮点、字符串、元组等，而可变类型都不是hashable类型，因为可变类型无法确定唯一的ID值，所以也就不能放到集合中。
+  - **集合本身也是可变类型**，所以集合不能够作为集合中的元素，这一点在使用集合的时候一定要注意。
+- 与列表不同的地方在于集合中的元素**没有序**、**不能用索引运算**、**不能重复**。
+
+
+<img src="https://github.com/jackfrued/mypic/raw/master/20210819154520.png" width="90%">
+
+# 字典
+
+- 字典中的键必须是不可变类型；值可以不是
+
+# 函数
+
+
+| 函数    | 说明                                                         |
+| ------- | ------------------------------------------------------------ |
+| `abs`   | 返回一个数的绝对值，例如：`abs(-1.3)`会返回`1.3`。           |
+| `bin`   | 把一个整数转换成以`'0b'`开头的二进制字符串，例如：`bin(123)`会返回`'0b1111011'`。 |
+| `chr`   | 将Unicode编码转换成对应的字符，例如：`chr(8364)`会返回`'€'`。 |
+| `hex`   | 将一个整数转换成以`'0x'`开头的十六进制字符串，例如：`hex(123)`会返回`'0x7b'`。 |
+| `input` | 从输入中读取一行，返回读到的字符串。                         |
+| `len`   | 获取字符串、列表等的长度。                                   |
+| `max`   | 返回多个参数或一个可迭代对象中的最大值，例如：`max(12, 95, 37)`会返回`95`。 |
+| `min`   | 返回多个参数或一个可迭代对象中的最小值，例如：`min(12, 95, 37)`会返回`12`。 |
+| `oct`   | 把一个整数转换成以`'0o'`开头的八进制字符串，例如：`oct(123)`会返回`'0o173'`。 |
+| `open`  | 打开一个文件并返回文件对象。                                 |
+| `ord`   | 将字符转换成对应的Unicode编码，例如：`ord('€')`会返回`8364`。 |
+| `pow`   | 求幂运算，例如：`pow(2, 3)`会返回`8`；`pow(2, 0.5)`会返回`1.4142135623730951`。 |
+| `print` | 打印输出。                                                   |
+| `range` | 构造一个范围序列，例如：`range(100)`会产生`0`到`99`的整数序列。 |
+| `round` | 按照指定的精度对数值进行四舍五入，例如：`round(1.23456, 4)`会返回`1.2346`。 |
+| `sum`   | 对一个序列中的项从左到右进行求和运算，例如：`sum(range(1, 101))`会返回`5050`。 |
+| `type`  | 返回对象的类型，例如：`type(10)`会返回`int`；而` type('hello')`会返回`str`。 |
+
+
+
+
+
+
+
+
+
+
 
 
 
