--- a/学习笔记.md
+++ b/学习笔记.md
@@ -115,7 +115,6 @@ ord()   # 获取文本编码
 
 # 函数
 
-
 | 函数    | 说明                                                         |
 | ------- | ------------------------------------------------------------ |
 | `abs`   | 返回一个数的绝对值，例如：`abs(-1.3)`会返回`1.3`。           |
@@ -136,7 +135,7 @@ ord()   # 获取文本编码
 | `sum`   | 对一个序列中的项从左到右进行求和运算，例如：`sum(range(1, 101))`会返回`5050`。 |
 | `type`  | 返回对象的类型，例如：`type(10)`会返回`int`；而` type('hello')`会返回`str`。 |
 
-
+- random模块的sample和choices函数都可以实现随机抽样，sample实现无放回抽样，这意味着抽样取出的字符是不重复的；choices实现有放回抽样，这意味着可能会重复选中某些字符。这两个函数的第一个参数代表抽样的总体，而参数k代表抽样的数量。
 
 
 
