--- a/学习笔记.md
+++ b/学习笔记.md
@@ -115,6 +115,8 @@ ord()   # 获取文本编码
 
 # 函数
 
+- 可以使用**sys**模块的**setrecursionlimit**函数来改变递归调用的最大深度，例如：sys.setrecursionlimit(10000)，但是不建议这样做，因为让递归快速收敛才是我们应该做的事情，否则就应该考虑使用循环递推而不是递归。
+- 
 | 函数    | 说明                                                         |
 | ------- | ------------------------------------------------------------ |
 | `abs`   | 返回一个数的绝对值，例如：`abs(-1.3)`会返回`1.3`。           |
